fixed width/spacing issue on comments section on newly uploaded vid page

--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -3,8 +3,9 @@
 
 .comments {
     margin-bottom: $componentSpacing;
-
+    width: 100%;
     @include for-desktop {
         border-right: 1px solid $secondarySilver;
+       
     }
 }
